--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@google/model-viewer": "^1.6.0",
     "next": "10.0.5",
     "next-secure-headers": "^2.1.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "webpack-subresource-integrity": "^1.5.2"
   }
 }
